<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent" android:layout_height="fill_parent" >

    <!--
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center|center_horizontal|center_vertical"  >

            <ImageButton
                android:id="@+id/imageBtn_UBI_info"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/info" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="   "/>

            <ImageButton
                android:id="@+id/imageBtn_UBI_info_service"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/service" />


        </LinearLayout>>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center|center_horizontal|center_vertical"  >


            <ImageButton
                android:id="@+id/imageBtn_UBI_error"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/error"
                />
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="   "/>

            <ImageButton
                android:id="@+id/imageBtn_UBI_tire_pressure"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/tire_pressure"/>


        </LinearLayout>>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp" />
            <!--
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />
            -->

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView_ble_state"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/data_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_clear"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/button_clear"
                android:textColor="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_UBI_Info"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/button_UBI_Info"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_UBI_Service"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/button_UBI_Service"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_UBI_Error"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/button_UBI_Error"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_UBI_Tire_Pressure"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/button_UBI_Tire_Pressure"
                android:textColor="@color/red"
                android:visibility="invisible" />
        </LinearLayout>

        <!--
            <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        -->



    </LinearLayout>
</ScrollView>